--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.0",
     "react": "^18.2.0",
