--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
     "bootstrap": "^5.3.2",
+    "csv-parser": "^3.0.0",
+    "fast-csv": "^5.0.0",
+    "file-saver": "^2.0.5",
+    "filefy": "^0.1.11",
     "firebase": "^10.7.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
